adding the rest of the endpoints
